@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Searching in both contacts and groups when LDAP addressbook with group_filters option is used
 - Update TinyMCE to version 4.3.13 (#5309)
 - Enigma: Delete user keys when using deluser.sh script
 - Enigma: Fix redundant list-secret-keys/list-public-keys calls on signing/encryption
